<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppTheme.Dialog.BackgroundLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/layout_top_bar"
        layout="@layout/include_dialog_navigation_top_bar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_vertical_large"
        android:layout_marginBottom="@dimen/margin_vertical_extra_large"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal_default"
            android:orientation="vertical">

            <include
                android:id="@+id/field_name"
                layout="@layout/include_field_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_vertical_large" />

            <include
                android:id="@+id/field_repeat_count"
                layout="@layout/include_field_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_vertical_large" />

            <include
                android:id="@+id/field_repeat_delay"
                layout="@layout/include_field_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_vertical_large" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_status"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_vertical_large"
                android:textColor="?attr/colorOnSurfaceVariant" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_record"
                    style="@style/AppTheme.Widget.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_horizontal_small"
                    android:text="@string/button_dumb_precision_gesture_record" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_play"
                    style="@style/AppTheme.Widget.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_horizontal_small"
                    android:text="@string/button_dumb_precision_gesture_play" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_clear"
                    style="@style/AppTheme.Widget.TextButtonOutlined"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_dumb_precision_gesture_clear" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
